# ChangeLog for app-misc/cl-base-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-base-meta-11.0 (09 Dec 2010)

  09 Dec 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> -cl-base-meta-10.9.ebuild,
  +cl-base-meta-11.0.ebuild:
  Version bump

*cl-base-meta-10.9 (22 Sep 2010)

  22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-base-meta-10.8.81.ebuild, +cl-base-meta-10.9.ebuild:
  new version

  13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-base-meta-10.5.83.ebuild, +cl-base-meta-10.8.81.ebuild:
  New version of meta-package.

*cl-base-meta-10.8.81 (13 Aug 2010)

  13 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-base-meta-10.5.83.ebuild, +cl-base-meta-10.8.81.ebuild:
  New version of meta-package.

*cl-base-meta-10.5.83 (03 Aug 2010)

  03 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-base-meta-10.5.83.ebuild:
  bump new meta-package
