@@ -1,2 +1,2 @@
-EBUILD cl-base-meta-11.0.ebuild 594 RMD160 0a405d7232a21c0b2387a25d127f5ff0f3bbb5e6 SHA1 0e6d4d0e28f923f68b377352b9d3baea090ec13f SHA256 1b301145cb12ce40ffe47a53fcbb469aa36f524cc0171b76b827f6f9851d4ddb
-MISC ChangeLog 998 RMD160 b810f71aecd194ab1c0ffd2704f6c34ba34e1d08 SHA1 60b229c020896bed7ac154910c35c27bb9443c88 SHA256 7fee26629016dfd8f4008852866bc07acf5f0b16c8ab2bb08ed1abc5b0d4e903
+EBUILD cl-base-meta-11.0-r1.ebuild 596 RMD160 40e06d5ed3a8dbf4eee4e5da5d944d72c49df57f SHA1 b8ab3f511fcf8810f28c047902279d634f03ffea SHA256 c2e1522b0091d3652c5bdfb4c9f758babffd86d9d3501238cd3549f7635def5c
+MISC ChangeLog 1211 RMD160 0f56c636ccfa0a891a151daaa6edc397de37eb30 SHA1 343f750ab5fe9bf1a5e297d298ba604ada9eab25 SHA256 bcca3e6c32f52e3664de510ff58158d365304b9531eff97f934df92814a702e6
