@@ -1,2 +1,2 @@
-EBUILD cl-tools-meta-11.0-r8.ebuild 2949 RMD160 491beb772586cb7601aa89fcad60f21f10629fa7 SHA1 93c64089a73cab1d60cae614127826b81190103c SHA256 84d21334f7115a638d789e6ffb5b60008a890dce5543f5ba4f10090c50e61aa8
-MISC ChangeLog 1809 RMD160 54dfa6f5d43ee245ab4d0f668326c3429b34b746 SHA1 83fb76fa7132f9a3932b2942629e012739bbd38a SHA256 0658259c9fa6ee076279c44e2b315c787e67a8120b599be8b9fef2a7883656f9
+EBUILD cl-tools-meta-11.0-r9.ebuild 2860 RMD160 2c46032c12a80c467e2dd5fb6ecc3b49619b06a3 SHA1 e3781184310d405aa2487d4a2e466e2f4ca8d124 SHA256 6d208bdc06ca610be6aff3a7d0f25fc84a8400db0c6f52fed98d65100d7bb5e5
+MISC ChangeLog 2006 RMD160 fae377ea6089640b4510e7733d28084d31378f82 SHA1 4c9f07d0a6224b9b4cbacbb43731862b9eb136bb SHA256 db0173fe0a709ec3ebdd258ba398211a767f613dae1fa97b47797fd372107039
