@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-tools-meta-11.0-r9 (19 Feb 2011)
+
+  19 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-tools-meta-11.0-r8.ebuild, +cl-tools-meta-11.0-r9.ebuild:
+  remove calculate utilities
+
 *cl-tools-meta-11.0-r8 (10 Feb 2011)
 
   10 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
