@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/cl-base-meta
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cl-base-meta-11.0-r1 (19 Feb 2011)
+
+  19 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-base-meta-11.0.ebuild, +cl-base-meta-11.0-r1.ebuild:
+  replace calculate-install to calculate-utilities
 
 *cl-base-meta-11.0 (09 Dec 2010)
 
